# Elite-Dangerous-3rd-Party-SDK

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  VIBE.md  biome.json  package-lock.json  package.json  tsconfig.json
python/: pyproject.toml
python/elite_dangerous_sdk/: __init__.py  commander_state.py  companion.py  companion_models.py  eddn.py  edsm.py  edsm_models.py  elitebgs.py  elitebgs_models.py  engineering.py  flags.py  inara.py  inara_models.py  journal.py  journal_replay.py  journal_stream.py  journal_types.py  journal_watcher.py  on_foot.py  query.py  spansh.py  spansh_models.py  stats.py  utils.py  ws_journal.py
python/elite_dangerous_sdk/data/: __init__.py  colonization.py  coriolis.py  fdevids.py  maps.py  resolver.py
python/elite_dangerous_sdk/planner/: __init__.py  bgs.py  colonization.py  colonization_economy.py  colonization_system.py  compare.py  dependency_graph.py  engineering_planner.py  engineers.py  exobiology.py  fleetcarrier.py  (+6 more)
python/examples/: community_example.py  companion_example.py  journal_example.py
python/tests/: test_colonization.py  test_commander_state.py  test_companion.py  test_data.py  test_dependency_graph.py  test_eddn.py  test_edsm.py  test_elitebgs.py  test_engineering.py  test_flags.py  test_inara.py  test_journal.py  test_journal_replay.py  test_journal_stream.py  test_on_foot.py  test_planner.py  test_planner_extra.py  test_query.py  test_resolver.py  test_route_optimizer.py  test_schema_smoke.py  test_spansh.py  test_stats.py  test_thargoid.py  test_utils.py  test_ws_journal.py
(+312 files in other folders)
