[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elite-dangerous-sdk"
version = "1.0.0"
description = "Elite Dangerous 3rd Party SDK - Journal, CAPI, and community API clients"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]
readme = "README.md"
dependencies = ["httpx"]

[project.optional-dependencies]
eddn = ["pyzmq"]
edsm = []
inara = []
companion = []
ws-journal = ["websockets>=12.0"]
test = ["pytest", "pytest-asyncio", "pytest-timeout"]

[tool.setuptools.packages.find]
include = ["elite_dangerous_sdk*"]
